force-app/main/default/objects/Cambios_OLI__c/Cambios_OLI__c.object-meta.xml
<CustomObject>
    <label>Cambios OLI</label>
    <nameField>
        <label>Cambios OLI Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Cambios OLI</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>