force-app/main/default/objects/Cambios_OLI__c/fields/Accion__c.field-meta.xml
<CustomField>
    <fullName>Accion__c</fullName>
    <label>Accion</label>
    <type>TextArea</type>
</CustomField>