force-app/main/default/objects/Cambios_OLI__c/fields/Fecha_de_Cambio__c.field-meta.xml
<CustomField>
    <fullName>Fecha_de_Cambio__c</fullName>
    <label>Fecha de Cambio</label>
    <type>DateTime</type>
</CustomField>