force-app/main/default/objects/Cambios_OLI__c/fields/Oportunidad_Referencia__c.field-meta.xml
<CustomField>
    <fullName>Oportunidad_Referencia__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Oportunidad Referencia</label>
    <referenceTo>Opportunity</referenceTo>
    <relationshipLabel>Cambios OLI</relationshipLabel>
    <relationshipName>Cambios_OLI</relationshipName>
    <type>Lookup</type>
</CustomField>