force-app/main/default/objects/Cambios_OLI__c/fields/Producto_Referencia__c.field-meta.xml
<CustomField>
    <fullName>Producto_Referencia__c</fullName>
    <label>Producto Referencia</label>
    <type>TextArea</type>
</CustomField>