force-app/main/default/objects/Cambios_OLI__c/fields/Usuario__c.field-meta.xml
<CustomField>
    <fullName>Usuario__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Usuario</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Cambios_OLI</relationshipName>
    <type>Lookup</type>
</CustomField>