force-app/main/default/objects/Cambios_OLI__c/fields/Valor_Actual__c.field-meta.xml
<CustomField>
    <fullName>Valor_Actual__c</fullName>
    <label>Valor Actual</label>
    <type>TextArea</type>
</CustomField>