force-app/main/default/objects/Cambios_OLI__c/fields/Valor_Anterior__c.field-meta.xml
<CustomField>
    <fullName>Valor_Anterior__c</fullName>
    <label>Valor Anterior</label>
    <type>TextArea</type>
</CustomField>